New URL + view for adding to existing lists. FT not passes :-(

--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -4,8 +4,11 @@
     </head>
     <body>
         <h1>Your To-Do list</h1>
-        <form method="POST" action="/lists/new">
+        <form method="POST" action="/lists/{{ list.id }}/add_item">
             <input name="item_text" id="id_new_item" placeholder="Enter a to-do item" />
+            {% for item in list.item_set.all %}
+                <tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
+            {% endfor %}
             {% csrf_token %}
         </form>
         <table id="id_list_table">
