refactor templates to use a base template

--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,4 +1,18 @@
-<html>
+{% extends 'base.html' %}
+
+{% block header_text %}Your To-Do list{% endblock %}
+
+{% block form_action %}/lists/{{ list.id }}/add_item{% endblock %}
+
+{% block table %}
+  <table id="id_list_table">
+    {% for item in items %}
+      <tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
+    {% endfor %}
+  </table>
+{% endblock %}
+
+<!-- <html>
     <head>
         <title>To-Do lists</title>    
     </head>
@@ -14,4 +28,4 @@
             {% endfor %}
         </table>
     </body>
-</html>
+</html> -->
